--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "element-theme": "^2.0.1",
     "element-ui": "^2.13.2",
     "vue": "^2.6.11",
     "vue-router": "^3.3.4"
