--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "core-js": "^3.6.5",
     "element-theme": "^2.0.1",
     "element-ui": "^2.13.2",
+    "js-cookie": "^2.2.1",
     "vue": "^2.6.11",
-    "vue-router": "^3.3.4"
+    "vue-router": "^3.3.4",
+    "vue-wxlogin": "^1.0.1",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
