改动太多，不写了

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "element-theme": "^2.0.1",
     "element-ui": "^2.13.2",
     "js-cookie": "^2.2.1",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.3.4",
     "vue-wxlogin": "^1.0.1",
