--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 .DS_Store
 node_modules
 /dist
-src/network/request.js
 
 # local env files
 .env.local
@@ -21,3 +20,5 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+
+/src/network/request.js
