--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "vue": "^2.6.11",
     "vue-router": "^3.3.4",
     "vue-wxlogin": "^1.0.1",
-    "vuex": "^3.5.1"
+    "vuex": "^3.5.1",
+    "weixin-jsapi": "^1.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
